# geographiclib-php-extension

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  readme.md
src/: lib.rs
tests/: geographiclib-php-bridge.stubs.php  test.php
