[package]
name = "geographiclib-php-extension"
version = "1.0.0"
edition = "2021"
authors = ["Owlnext <contact@owlnext.fr>", "Adrien Gras <agr@owlnext.fr>"]
description = "A bridge between Geographic lib in C and a corresponding PHP extension."
documentation = "https://github.com/owlnext-fr/geographiclib-php-extension"
readme = "README.md"
repository = "https://github.com/owlnext-fr/geographiclib-php-extension"
license-file = "LICENSE"
keywords = ["rust", "php", "geographiclib"]
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"

[dependencies]
ext-php-rs = "0.10.0"

[build-dependencies]
cc = "1.0.79"
bindgen = "0.64.0"